fix layout bug

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -43,20 +43,20 @@ form{
   align-items: center;
   background: var(--light);
 }
-.container{
+.login-container{
   display: flex;
   height: 100vh;
   max-width: 100%;
   position: relative;
 }
-.container > a{
+.login-container > a{
   position: absolute;
   width: 2.4rem;
   height: 2.4rem;
   left: 3.6rem;
   top: 2.9rem;
   }
-.container header{
+.login-container header{
   display: flex;
   width: 100%;
   min-width: 36rem;
@@ -66,7 +66,7 @@ form{
   justify-content: center;
   padding: 0 5rem;
 } 
-.container header span{
+.login-container header span{
   width: 30rem;
   margin-top: 2rem;
   color: var(--text-secondary)
@@ -100,17 +100,17 @@ fieldset a:hover{
 }
 
 @media (max-width:700px){
-  .container{
+  .login-container{
     flex-direction: column;
     height: 100%;
   }
-  .container form{
+  .login-container form{
     padding: 5rem 5rem;
   }
-  .container form fieldset{
+  .login-container form fieldset{
     margin: 0;
   }
-  .container header{
+  .login-container header{
     padding: 5rem 0rem;
     min-width: 100%;
   }
